# dumb-crypto

./: CMakeLists.txt  caesar.c
cmd/: CMakeLists.txt
crypto/: CMakeLists.txt  affine_caesar.c  caesar.c  caesar_keyword.c  crypto.h  encryption_table.c  encryption_table_double_permutation.c  lib.c  lib.h  magic_square.c  playfair.c  polybius-square-v2.c  polybius_square.c  proportional-permutation.c  trithemius.c
gui/: CMakeLists.txt  affine-caesar-gui.cpp  encryption-table-double-permutation-gui.cpp  encryption-table-gui.cpp  encryption-table-single-permutation-gui.cpp  magic-square-gui.cpp  trithemius-gui.cpp  vigenere-gui.cpp
string/: CMakeLists.txt  str.h  str_push_back.c
tests/: CMakeLists.txt  caesar-keyword-cipher-test.c  encryption-table-cipher-test.c  magic-square-cipher-test.c  playfair-cipher-test.c  string-test.c  unicode-len-test.c
unicode/: unicode.c  unicode.h
