cmake_minimum_required(VERSION 3.1)
project(DumbCrypto)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
if (NOT MSVC)
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

add_subdirectory(unicode)
add_subdirectory(crypto)

option(DC_TESTS "Build tests" OFF)
if(DC_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()
