link_libraries(Crypto fltk)

add_executable(affine-caesar-gui affine-caesar-gui.cpp)
add_executable(caesar-gui caesar-gui.cpp)
add_executable(caesar-keyword-gui caesar-keyword-gui.cpp)
add_executable(encryption-table-gui encryption-table-gui.cpp)
add_executable(encryption-table-single-permutation-gui encryption-table-single-permutation-gui.cpp)
